# xmonad_config

./: .gitignore  README.md  build  prompt-history  stack.yaml  strokyl-xmonad.cabal  xmonad.hs
src/: xmonad.hs
