name:                strokyl-xmonad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/strokyl-xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable strokyl-xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , X11
                     , strokyl-xmonad
                     , containers
                     , xmonad
                     , xmonad-contrib
                     , mtl
                     , process
                     , data-default
  default-language:    Haskell2010

test-suite strokyl-xmonad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , strokyl-xmonad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head

  type:     git

  location: https://github.com/strokyl/xmonad_config
